# Mr-Manager

./: .gitattributes  .gitignore  .npmrc  .prettierignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVDOCK_CODEX_MASTER_PROMPT.md  PRIVACY.md  README.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml
docs/: ARCHITECTURE.md  CLEANER_SAFETY.md  DECISIONS.md  DEMO_SCRIPT.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  THREAT_MODEL.md
e2e/: smoke.spec.ts
fixtures/projects/: README.md
fixtures/projects/python-uv/: .env.example  pyproject.toml
fixtures/projects/python-uv/src/fixture_api/: __init__.py  main.py
scripts/: check-branch-name.mjs  check-repository-hygiene.mjs  open-built-app.ps1
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql  0002_project_scans.sql  0003_metric_recordings.sql  0004_cleaner_quarantine.sql  0005_content_portfolio.sql  0006_refresh_modes.sql
src-tauri/permissions/autogenerated/: add_metric_annotation.toml  add_project.toml  add_project_root.toml  cancel_background_task.toml  cancel_cleanup_scan.toml  cancel_project_scan.toml  container_action.toml  create_cleanup_plan.toml  delete_metric_recording.toml  execute_quarantine_plan.toml  export_metric_recording.toml  get_background_task.toml  get_capability_report.toml  get_container_logs.toml  get_docker_inventory.toml  get_docker_status.toml  get_managed_process_logs.toml  get_metric_recording.toml  get_network_snapshot.toml  get_ollama_status.toml  get_overview_snapshot.toml  get_system_diagnostics_snapshot.toml  get_system_snapshot.toml  get_topology_graph.toml  get_wsl_status.toml  list_background_tasks.toml  list_compose_projects.toml  list_containers.toml  list_docker_networks.toml  list_docker_volumes.toml  list_managed_processes.toml  list_metric_sessions.toml  list_ports.toml  list_processes.toml  list_quarantine_manifests.toml  open_local_preview.toml  parse_compose_project.toml  probe_integration.toml  purge_quarantine_item.toml  purge_quarantine_manifest.toml  (+15 more)
src-tauri/src/: collector.rs  commands.rs  lib.rs  logging.rs  main.rs
src-tauri/src/cleaner/: mod.rs
src-tauri/src/db/: cleaner.rs  mod.rs  projects.rs  recordings.rs
src-tauri/src/docker/: mod.rs
src-tauri/src/domain/: cleaner.rs  docker.rs  integration.rs  mod.rs  network.rs  project.rs  system_diagnostics.rs  task.rs  topology.rs
src-tauri/src/integrations/: mod.rs
src-tauri/src/networking/: mod.rs
src-tauri/src/platform/: mod.rs  process.rs  windows.rs
src-tauri/src/projects/: mod.rs
src-tauri/src/security/: redaction.rs
src-tauri/src/supervisor/: mod.rs
src-tauri/src/system_diagnostics/: mod.rs
src-tauri/src/tasks/: mod.rs
src-tauri/src/topology/: mod.rs
src/app/: App.tsx  AppShell.tsx  queries.ts
src/components/: AsyncState.tsx  AvailabilityBadge.tsx  (+6 more)
(+58 files in other folders)
